kubernetes/services/open-webui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    name: open-webui
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
